--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #08022c;
+    background-color: #08001d;
     color: #ffffff;
     font-family: 'Open Sans', 'sans-serif';
     font-size: 15px;
