--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .card-1 {
-    background-image: url('https://images.sympla.com.br/61a6383b5d367-lg.png');
+    background-image: url('https://static-public.klickpages.com.br/uploads/media/file/4410322/titulo_logo.png');
 }
 
 .card-2 {
@@ -97,10 +97,6 @@ a:hover {
 }
 
 .card-3 {
-    background-image: url('https://images.sympla.com.br/61a65c60d51bc-lg.png');
-}
-
-.card-4 {
     background-image: url('https://images.sympla.com.br/617c21587a2d8-lg.png');
 }
 
@@ -108,7 +104,7 @@ a:hover {
     background-image: url('https://images.sympla.com.br/619007027390c-lg.png');
 }
 
-.card-6 {
+.card-5 {
     background-image: url('https://images.sympla.com.br/61a642d1e4714-lg.png');
 }
 
