--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .card-1 {
-    background-image: url('https://static-public.klickpages.com.br/uploads/media/file/4410322/titulo_logo.png');
+    background-image: url('./assets/defesa.png');
     background-color: #E6E6E6;
 }
 
