--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ a:hover {
     background-image: url('https://images.sympla.com.br/61a642d1e4714-lg.png');
 }
 
+.card-6 {
+    background-image: url('https://images.sympla.com.br/61a65f342cbca-lg.jpg');
+}
+
 .card h2 {
     text-align: center;
     padding: 10px;
