--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ a:hover {
     max-width: 150px;
 }
 
+.card-1 {
+    background-image: url('https://forumblockchain.com.br/wp-content/uploads/2022/01/header.jpg');
+    background-color: #E6E6E6;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
