--- a/style.css
+++ b/style.css
@@ -89,19 +89,8 @@ a:hover {
 }
 
 .card-1 {
-    background-image: url('https://images.sympla.com.br/62156fb2c4fe0-lg.jpg');
+    background-image: url('https://www.sympla.com.br/imgs/2a09d9c314f840836d421834a687bcf2.png');
     background-color: #E6E6E6;
-}
-
-.card-2 {
-    background-image: url('https://images.sympla.com.br/621fbc4937f18-lg.jpg');
-    background-color: #E6E6E6;
-}
-
-.card h2 {
-    text-align: center;
-    padding: 10px;
-    color: #000000;
 }
 
 .card a {
